--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -18,6 +18,7 @@ jobs:
       matrix:
         otp:
           - "24.2.1.0"
+          - "23.3.4.11"
           - "22.3.4.24"
 
     container:
@@ -27,7 +28,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Compile
         run: ./rebar3 compile
-      - name: Run xref and dialyzer
-        run: ./rebar3 do xref, dialyzer
       - name: Run eunit
-        run: ./rebar3 as gha do eunit
+        run: ./rebar3 as gha do eunit --module=riak_repl2_rt_source_sink_tests
