--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -28,5 +28,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Compile
         run: ./rebar3 compile
+      - name Run xref and dialyzer
+        run ./rebar3 do xref, dialyzer
       - name: Run eunit
-        run: ./rebar3 as gha do eunit --module=riak_repl2_rt_source_sink_tests
+        run: ./rebar3 as gha do eunit
