--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Compile
         run: ./rebar3 compile
-      - name Run xref and dialyzer
-        run ./rebar3 do xref, dialyzer
+      - name: Run xref and dialyzer
+        run: ./rebar3 do xref, dialyzer
       - name: Run eunit
         run: ./rebar3 as gha do eunit
