--- a/rebar.config
+++ b/rebar.config
@@ -20,9 +20,9 @@
 {eunit_opts, [verbose]}.
 
 {deps, [
-        {ranch, {git, "git://github.com/ninenines/ranch.git", {tag, "1.8.0"}}},
-        {ebloom,{git, "git://github.com/basho/ebloom.git", {tag, "2.1.0"}}},
-        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop"}}}
+        {ranch, {git, "https://github.com/ninenines/ranch.git", {tag, "1.8.0"}}},
+        {ebloom,{git, "https://github.com/basho/ebloom.git", {tag, "2.1.0"}}},
+        {riak_kv, {git, "https://github.com/basho/riak_kv.git", {branch, "develop"}}}
        ]}.
 
 {plugins, [{rebar3_gpb_plugin, {git, "https://github.com/basho/rebar3_gpb_plugin", {tag, "2.15.1+riak.3.0.4"}}},
