--- a/rebar.config
+++ b/rebar.config
@@ -23,7 +23,7 @@
 {deps, [
         {lager, {git, "https://github.com/erlang-lager/lager.git", {tag, "3.8.0"}}},
         {ranch, {git, "https://github.com/ninenines/ranch.git", {tag, "1.6.0"}}},
-        {ebloom,{git, "https://github.com/basho/ebloom.git", {tag, "2.1.0"}}},
+        {ebloom,{git, "https://github.com/basho/ebloom.git", {branch, "develop-3.0"}}},
         {riak_kv, {git, "https://github.com/basho/riak_kv.git", {branch, "develop-3.0"}}}
        ]}.
 
