--- a/rebar.config
+++ b/rebar.config
@@ -2,12 +2,13 @@
 
 {cover_enabled, true}.
 
-{erl_opts, [debug_info, 
+{erl_opts, [debug_info,
             warnings_as_errors,
             {i, "./_build/default/plugins/gpb/include"},
             {platform_define, "^[0-9]+", namespaced_types},
             {platform_define, "^[2-9][1-9](.?[0-9]*)", otp21},
-            {platform_define, "^[2-9][2-9](.?[0-9]*)", otp22}]}.
+            {platform_define, "^[2-9][2-9](.?[0-9]*)", otp22},
+            {platform_define, "^[2-9][5-9](.?[0-9]*)", otp25}]}.
 
 {erl_first_files, ["src/gen_leader.erl"]}.
 
